--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>On the coming events</title>
-
-  </head>
-  <body>
-    <main>
-    <h1>On coming events</h1>  
-    </main>
-  </body>
-</html>
+--
+layout: default
+title: On the coming events
+--
+<h1>On coming events</h1>
+Events are coming
